--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ server.port=1515
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.devtools.livereload.enabled=true
+spring.jpa.open-in-view=true
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
