This diff introduces several changes related to error handling, data validation, and new features like transactions:
**GlobalExceptionHandler.java:**

* **Improved Error Handling:** The `GlobalExceptionHandler` now provides more informative error messages for various exceptions, including `DataIntegrityViolationException`, `UnexpectedRollbackException`, `SQLException`, and `ConstraintViolationException`. Each error message now includes the exception message and the handler method name for easier debugging.
* **Handling Invalid JSON:** A new handler, `handleHttpMessageNotReadable`, has been added to specifically address invalid JSON requests. It returns a 500 (INTERNAL_SERVER_ERROR) status with a detailed error message.
* **Catch-all for Throwables:**  A new handler, `handleThrowableException`, acts as a catch-all for uncaught `Throwable` instances, providing a generic error response.

**Category.java:**

* **Data Validation:** The `@NotBlank` annotation has been added to the `name` field, ensuring that category names cannot be blank.

**UserController.java:**

* **New Endpoint for User Data Retrieval:** A new endpoint, `/getData`, has been added. This endpoint allows authenticated users to retrieve their own user data using the JWT token.
* **Simplified User ID Retrieval:** The code for extracting the authenticated user's ID from the JWT token has been moved to the `Components` class for better code organization and reusability.

**Transaction.java:**

* **Data Validation:**
    * `@NotNull` annotation added to `userId` to ensure it's not null.
    * `@Min(0)` annotation added to `totalPrice` to ensure it's not negative.
* **Default Value:** `@ColumnDefault("FALSE")` sets the default value of `isRecurring` to false.

**CategoryRepository.java:**

* **Code Cleanup:** Unnecessary import statements have been removed.

**ItemTransaction.java:**

* **New Association:** A new `UserItem` association has been added to the `ItemTransaction` entity, likely to track which spec

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,4 @@ server:
     include-binding-errors: always
     include-stacktrace: on_param
     include-exception: false
+    include-path: always
