--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ server.port=1515
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.devtools.livereload.enabled=true
 spring.jpa.open-in-view=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
 
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
