Stop tracking files now listed in .gitignore

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=personal_trainer
-server.port=1515
+#server.port=1515
+
+server.ssl.key-store=keystore.p12
+server.ssl.key-store-password=123456ss
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=alias
 
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.devtools.livereload.enabled=true
